# jackal-paw

./: README.md  pyproject.toml
data/pseudopotentials/: README.md
data/references/: README.md
docs/: code_spec.md  index.md  input_reference.md
docs/developer/: architecture.md  data_model.md  jit_and_precision.md
docs/theory/: autodiff_forces_stress.md  paw.md  plane_wave_ks.md  scf_and_mixing.md  uspp.md
examples/: ase_singlepoint.py
examples/al_pbe_kmesh/: input.yaml  structure.cif
examples/si_pbe_gamma/: input.yaml  structure.cif
scripts/: profile_apply_h.py  qe_compare.py  run_jackal.py
src/jackal/: __init__.py
src/jackal/autodiff/: forces.py  implicit_scf.py  stress.py
src/jackal/calculator/: __init__.py  ase_calculator.py  results_cache.py
src/jackal/core/: config.py  constants.py  types.py  units.py
src/jackal/density/: augmentation.py  mixer.py  occupations.py  rho.py
src/jackal/electrostatics/: coulomb.py  ewald.py  exx.py  hartree.py
src/jackal/hamiltonian/: apply_h.py  kinetic.py  local_terms.py  nonlocal.py  overlap.py
src/jackal/io/: ase_io.py  restart_io.py  upf_parser.py  yaml_input.py
src/jackal/lattice/: cell.py  fft_grid.py  gvectors.py  kpoints.py
src/jackal/solvers/: scf.py  (+4 more)
tests/: conftest.py
tests/integration/: test_al_smearing.py  test_ase_calculator.py  test_si_pbe_gamma.py
tests/regression/: test_forces_fd.py  test_qe_reference_small.py  test_stress_fd.py
tests/unit/: test_fft_grid.py  test_gvectors.py  test_kpoints.py  test_units.py  test_upf_parser.py  test_xc_lda.py  test_xc_pbe.py  test_yaml_input.py
(+13 files in other folders)
